maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:13: error: not found: value checkMur
    if (checkMur()){
        ^